@@ -1,8 +1,15 @@
 ---
 user: pierre
+# elasticsearch domain
 es_address: http://192.168.0.18/es
+# logstash
 logstash_domain: 192.168.0.18:5043
+# kibana config
 kibana_url: https://github.com/elasticsearch/kibana/archive/master.zip
 kibana_user: kibana
 kibana_domain: 192.168.0.18
 kibana_pwd: banana2013
+# backup all by default
+backup_main_dir: /
+# where to backup
+backup_repository: /media/backup/ubuntu
