@@ -90,5 +90,5 @@ host    all             all             ::1/128                 trust
 # Allow replication connections from localhost, by a user with the
 # replication privilege.
 #local   replication     pierre                                trust
-#host    replication     pierre        127.0.0.1/32            trust
+local    replication     pierre        127.0.0.1/32            trust
 #host    replication     pierre        ::1/128                 trust
