@@ -1,5 +1,12 @@
 2014-05-26  Pierre Aubert  <pierre@imac-pierre.home>
 
+	* roles/databases/templates/postgresql.conf.j2 (wal_level):
+	activate hot_standy
+
+	* tsuru is working; paas with docker.io :)
+
+	* add a automatic backup
+
 	* roles/admin/templates/nginx_kibana.conf.j2: put kibana on port 7080
 
 	* roles/tsuru/tasks/gandalf.yml: add service
